--- a/index.html
+++ b/index.html
@@ -4,86 +4,92 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Acklen Avenue Church of Christ</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" media="screen">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
   <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<style>
+.navbar {
+    border-bottom-width: 3px;
+    border-bottom-color: #CC9;
+    border-bottom-style: solid;
+}
+</style>
 </head>
 
 <body name='la-message' href='#la-message'>
-  <div id="wrapper">
-    <div id="logo"><img src="images/acklen_logo.jpg" width="244" height="87" alt="Acklen Avenue Church of Christ" /></div>
-    <div id="nav">
-      <ul>
-        <li><a href="who.html">Who We Are</a></li>
-        <li><a href="community.html">Community Life</a></li>
-        <li><a href="location.html">Visit Us</a></li>
-      </ul>
-    </div>
-    <div id="container">
-      <div id="slideshow">
-        <ul id="slide_nav">
-          <li id="prev"><a href="#"><img src="images/prev.png" width="45" height="45" /></a></li>
-          <li id="next"><a href="#"><img src="images/next.png" width="45" height="45" /></a></li>
-        </ul>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<nav class="navbar navbar-expand-md navbar-light">
+  <a class="navbar-brand" style="max-width: 50%;" href="#"><img class="img-fluid" alt="Acklen Logo" src="images/acklen_logo.jpg"></a>
+  <button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse align-self-end" id="navbarSupportedContent">
+    <ul class="navbar-nav w-100 justify-content-end">
+        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="who.html">Who We Are</a></li>
+        <li class="nav-item"><a class="nav-link" href="community.html">Community Life</a></li>
+        <li class="nav-item"><a class="nav-link" href="location.html">Location &amp; Service Times</a></li>
+    </ul>
+  </div>
+</nav>
+    <div class="container-fluid p-2" id="container">
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner" role="listbox">
+	    <div class="carousel-item active">
+	      <img class="d-block img-fluid" src="images/1.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/2.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/3.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/4.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/5.jpg" >
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
 
-        <ul id="slides">
-          <li><img src="images/1.jpg" /></li>
-          <li><img src="images/2.jpg" /></li>
-          <li><img src="images/3.jpg" /></li>
-          <li><img src="images/4.jpg" /></li>
-          <li><img src="images/5.jpg" /></li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="box_wrap">
-      <div id="box1">
-      </div>
-      <div class="box2_3">
-      </div>
-      <div class="box2_3">
-      </div>
-    </div>
 
   </div>
-  <div id="footer_wrap">
-    <div id="footer">
-      <div id="footer_icons">
-        <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
-      </div>
-      <div id="footer_nav">
-        <ul>
-          <li><a href="who.html">Home</a></li>
-          <li><a href="who.html">Who We Are</a></li>
-          <li><a href="community.html">Community Life</a></li>
-
-          <li><a href="location.html">Visit Us</a></li>
-        </ul>
-      </div>
-      <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><a href="contact.html">Contact Us</a></div>
+<footer class="bd-footer text-white" style="background-color: #383322;">
+  <div id="container-fluid">
+        <div class="row p-4">
+        <div class="col-1 d-flex justify-content-center">
+                <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
+        </div>
+        <div class="col-11">
+                 <div class="row">
+                         <div class="col-lg-5 d-flex justify-content-end">
+                         © 2012 Acklen Avenue Church of Christ<br/>
+                        </div>
+                         <div class="col-lg-5 d-flex justify-content-end">
+                         <strong>900 Acklen Avenue Nashville, TN 37203</strong><br/>
+                        </div>
+                         <div class="col-lg-2 d-flex justify-content-end">
+                         <a href="mailto:info@acklen.org">Contact Us</a></p>
+                        </div>
+                </div>
+        </div>
     </div>
-  </div>
-  <div id="la-message" class="modal_close" data-year="2017" data-day="01" data-month="01">
-    <h3>Greetings!</h3>
-    <p style="margin-bottom: 5px; margin-top: 5px;">
-      Over the holiday season the Acklen Avenue congregation will have the following schedule changes:<br/>
-      <ul style="margin-left:15px;">
-        <li>
-          We will have church <b>Sunday morning</b> on <b>December 25</b> and <b>January 1</b> however worship is at <b>10 am</b>          and there will be no class.
-        </li>
-        <li>
-          <b>Sunday night</b> bible study on <b>December 25</b> and <b>January 1</b> is canceled.
-        </li>
-        <li>
-          <b>Wednesday night</b> bible study on <b>December 21 and 28</b> is canceled.
-        </li>
-      </ul>
-      <br/> Please come and join us!
-      <br/>
-    </p>
-  </div>
+
+</footer>
 </body>
 
 </html>
