--- a/location.html
+++ b/location.html
@@ -4,38 +4,51 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Acklen Avenue Church of Christ</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" media="screen">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-  <script type="text/javascript" src="js/scripts.js"></script>
-  <script>
-      function wopen(url, name, w, h) {
-        // Fudge factors for window decoration space.
-        // In my tests these work well on all platforms & browsers.
-
-        var win = window.open(url,
-          name,
-          'width=' + w + ', height=' + h + ', ' +
-          'location=no, menubar=no, ' +
-          'status=no, toolbar=no, scrollbars=no, resizable=no');
-        win.resizeTo(w, h);
-        win.focus();
-      }
-  </script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<style>
+.navbar {
+    border-bottom-width: 3px;
+    border-bottom-color: #CC9;
+    border-bottom-style: solid;
+}
+.google-maps {
+   position: relative;
+   padding-bottom: 75%; // This is the aspect ratio
+   height: 0;
+   overflow: hidden;
+}
+.google-maps iframe {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100% !important;
+   height: 100% !important;
+}
+</style>
 </head>
 
 <body>
-  <div id="wrapper">
-    <div id="logo"><img src="images/acklen_logo.jpg" width="244" height="87" alt="Acklen Avenue Church of Christ" /></div>
-    <div id="nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="who.html">Who We Are</a></li>
-        <li><a href="community.html">Community Life</a></li>
-        <li><a href="location.html">Visit Us</a></li>
-      </ul>
-    </div>
-    <div id="container_interior">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+<nav class="navbar navbar-expand-md navbar-light">
+  <a class="navbar-brand" style="max-width: 50%;" href="#"><img class="img-fluid" alt="Acklen Logo" src="images/acklen_logo.jpg"></a>
+  <button class="navbar-toggler justify-content-end" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse align-self-end" id="navbarSupportedContent">
+    <ul class="navbar-nav w-100 justify-content-end">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="who.html">Who We Are</a></li>
+        <li class="nav-item"><a class="nav-link" href="community.html">Community Life</a></li>
+        <li class="nav-item active"><a class="nav-link" href="location.html">Location &amp; Service Times</a></li>
+    </ul>
+  </div>
+</nav>
+  <div class="container-fluid p-4">
       <div id="content">
         <h1>Location &amp; Service Times</h1>
         <h2>Location</h2>
@@ -43,7 +56,9 @@
           of Nashville, Tennessee.</p>
         <p>Our address is:<br /> 900 Acklen Avenue<br /> Nashville, TN 37203</p>
 
+<div class="google-maps">
         <iframe width="640" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?q=900+Acklen+Avenue+Nashville,+TN+37203-5410&amp;ie=UTF8&amp;hq=&amp;hnear=900+Acklen+Ave,+Nashville,+Tennessee+37203&amp;gl=us&amp;t=h&amp;z=14&amp;vpsrc=0&amp;ll=36.134273,-86.782359&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+</div>
         <br/><br/>
         <h2>Service Times</h2>
         <h3>Worship</h3>
@@ -91,22 +106,28 @@
       </div>
     </div>
   </div>
-  <div id="footer_wrap">
-    <div id="footer">
-      <div id="footer_icons">
-        <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
-      </div>
-      <div id="footer_nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="who.html">Who We Are</a></li>
-          <li><a href="community.html">Community Life</a>
-            <li><a href="location.html">Visit Us</a></li>
-        </ul>
-      </div>
-      <div id="footer_copyright">© 2012 Acklen Avenue Church of Christ <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><a href="mailto:info@acklen.org">Contact Us</a></div>
+<footer class="bd-footer text-white" style="background-color: #383322;">
+  <div id="container-fluid">
+        <div class="row p-4">
+        <div class="col-1 d-flex justify-content-center">
+                <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
+        </div>
+        <div class="col-11">
+                 <div class="row">
+                         <div class="col-lg-5 d-flex justify-content-end">
+                         © 2012 Acklen Avenue Church of Christ<br/>
+                        </div>
+                         <div class="col-lg-5 d-flex justify-content-end">
+                         <strong>900 Acklen Avenue Nashville, TN 37203</strong><br/>
+                        </div>
+                         <div class="col-lg-2 d-flex justify-content-end">
+                         <a href="mailto:info@acklen.org">Contact Us</a></p>
+                        </div>
+                </div>
+        </div>
     </div>
-  </div>
+
+</footer>
 </body>
 
 </html>
