--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Acklen Avenue Church of Christ</title>
-  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-  <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
-  <script type="text/javascript" src="js/scripts.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -37,7 +34,7 @@
     </ul>
   </div>
 </nav>
-    <div class="container-fluid p-2" id="container">
+    <div class="container-fluid p-2" id="container" style="max-width: 960px;;">
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner" role="listbox">
 	    <div class="carousel-item active">
