--- a/location.html
+++ b/location.html
@@ -7,26 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<style>
-.navbar {
-    border-bottom-width: 3px;
-    border-bottom-color: #CC9;
-    border-bottom-style: solid;
-}
-.google-maps {
-   position: relative;
-   padding-bottom: 75%; // This is the aspect ratio
-   height: 0;
-   overflow: hidden;
-}
-.google-maps iframe {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100% !important;
-   height: 100% !important;
-}
-</style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -58,6 +39,27 @@
 </div>
         <br/><br/>
         <h2>Service Times</h2>
+        <h3>DUE TO COVID-19</h3>
+        <p>Since we cannot meet at the building at this time we have other options.</p>
+        <p>
+        <ul>
+          <li>Sunday Morning Worship audio stream can be found at <a href="https://anchor.fm/900-acklen-ave">https://anchor.fm/900-acklen-ave</a>.</li>
+          <li>Sunday morning 10am Coffee and Donuts Zoom meeting</li>
+          <li>Sunday evening 5pm Check-In on Zoom</li>
+          <li>Wednesday night Check-In starting at:
+            <ul>
+              <li>5:30pm elementary school</li>
+              <li>6:00pm middle school</li>
+              <li>6:30pm high school</li>
+              <li>7:00pm adults</li>
+            </ul>
+          </li>
+        </ul>
+        Our Zoom meetings are password protected.  If you would like to join the google groups and
+        receive updates and zoom invites send email to <a href="mailto:900acklenave@gmail.com">here</a>.
+
+        </p>
+        <!--  
         <h3>Worship</h3>
         <p><strong>Sunday Morning Worship</strong> begins at 9:00 AM and usually lasts about an hour. The service includes prayer,
           Bible readings, songs, a sermon, and the Lord’s Supper. Afterwards, coffee and donuts are served. There is a cry
@@ -96,33 +98,29 @@
         <p>After a brief time of announcements, we share in coffee and donuts.</p>
 
         <p>Some will stay for a class (we offer classes for all ages from 10:20-11:00), and some will head out at this time. Feel free to do what is best for your family.</p>
-
+        -->
 
       </div>
     </div>
   </div>
-<footer class="bd-footer text-white" style="background-color: #383322;">
-  <div id="container-fluid">
-        <div class="row p-4">
-        <div class="col-1 d-flex justify-content-center">
+  <footer class="text-white brown-background">
+    <div id="container-fluid">
+      <div class="row footer-rowed">
+        <div class="col-lg-1 col-sm-12 d-flex justify-content-end">
                 <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
         </div>
-        <div class="col-11">
-                 <div class="row">
-                         <div class="col-lg-5 d-flex justify-content-end">
-                         © 2012 Acklen Avenue Church of Christ<br/>
-                        </div>
-                         <div class="col-lg-5 d-flex justify-content-end">
-                         <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><br/>
-                        </div>
-                         <div class="col-lg-2 d-flex justify-content-end">
-                         <a href="mailto:info@acklen.org">Contact Us</a></p>
-                        </div>
-                </div>
+        <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
+          © 2020 Acklen Avenue Church of Christ<br/>
         </div>
+        <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
+          <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><br/>
+        </div>
+        <div class="col-lg-1  col-sm-12 d-flex justify-content-end">
+          <a href="mailto:900acklenave@gmail.com">Contact Us</a></p>
+        </div>
+      </div>
     </div>
-
-</footer>
+  </footer>
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-253145-1"></script>
 <script>
