--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<style>
-.navbar {
-    border-bottom-width: 3px;
-    border-bottom-color: #CC9;
-    border-bottom-style: solid;
-}
-</style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body name='la-message' href='#la-message'>
@@ -31,23 +25,38 @@
     </ul>
   </div>
 </nav>
-    <div class="container-fluid p-2" id="container" style="max-width: 960px;;">
+    <div class="container-fluid expanded-top-and-bottom-space stunted-width" id="container">
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner" role="listbox">
-	    <div class="carousel-item active">
-	      <img class="d-block img-fluid" src="images/1.jpg" >
+      <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/11.jpg" >
+	    </div>
+      <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/06.jpg" >
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="images/2.jpg" >
+	      <img class="d-block img-fluid" src="images/07.jpg" >
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="images/3.jpg" >
+	      <img class="d-block img-fluid" src="images/08.jpg" >
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="images/4.jpg" >
+	      <img class="d-block img-fluid" src="images/09.jpg" >
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="images/5.jpg" >
+	      <img class="d-block img-fluid" src="images/10.jpg" >
+      </div>
+      <div class="carousel-item active">
+	      <img class="d-block img-fluid" src="images/12.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/13.jpg" >
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/14.jpg" >
+      </div>
+      <div class="carousel-item">
+	      <img class="d-block img-fluid" src="images/15.jpg" >
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -62,27 +71,23 @@
 
 
   </div>
-<footer class="bd-footer text-white" style="background-color: #383322;">
+<footer class="text-white brown-background">
   <div id="container-fluid">
-        <div class="row p-4">
-        <div class="col-1 d-flex justify-content-center">
-                <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
-        </div>
-        <div class="col-11">
-                 <div class="row">
-                         <div class="col-lg-5 d-flex justify-content-end">
-                         © 2012 Acklen Avenue Church of Christ<br/>
-                        </div>
-                         <div class="col-lg-5 d-flex justify-content-end">
-                         <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><br/>
-                        </div>
-                         <div class="col-lg-2 d-flex justify-content-end">
-                         <a href="mailto:info@acklen.org">Contact Us</a></p>
-                        </div>
-                </div>
-        </div>
+    <div class="row footer-rowed">
+      <div class="col-lg-1 col-sm-12 d-flex justify-content-end">
+              <a href="http://www.facebook.com/groups/2344458711/" target="_blank"><img src="images/icon_facebook.gif" alt="Facebook" width="32" height="32" border="0" class="icon_pad" /></a>
+      </div>
+      <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
+        © 2020 Acklen Avenue Church of Christ<br/>
+      </div>
+      <div class="col-lg-5 col-sm-12 d-flex justify-content-end">
+        <strong><a href="https://www.google.com/maps/place/900+Acklen+Ave,+Nashville,+TN+37203/@36.134273,-86.782359,7885m/data=!3m1!1e3!4m5!3m4!1s0x886466800df13e37:0x44e9a64f3aec173a!8m2!3d36.1342847!4d-86.7824671">900 Acklen Avenue Nashville, TN 37203</a></strong><br/>
+      </div>
+      <div class="col-lg-1  col-sm-12 d-flex justify-content-end">
+        <a href="mailto:900acklenave@gmail.com">Contact Us</a></p>
+      </div>
     </div>
-
+  </div>
 </footer>
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-253145-1"></script>
