--- a/location.html
+++ b/location.html
@@ -40,12 +40,30 @@
         <br/><br/>
         <h2>Service Times</h2>
         <h3>DUE TO COVID-19</h3>
-        <p>Since we cannot meet at the building at this time we have other options.</p>
+        <p>Please bear with us.  These options change from time to time.</p>
         <p>
         <ul>
           <li>Sunday Morning Worship audio stream can be found at <a href="https://anchor.fm/900-acklen-ave">https://anchor.fm/900-acklen-ave</a>.</li>
-          <li>Sunday morning 10am Coffee and Donuts Zoom meeting</li>
-          <li>Sunday evening 5pm Check-In on Zoom</li>
+          <li>9 AM worship inside at 900 Acklen Avenue
+            <ul>
+              <li>There is sign up posted on our Google Group.  (preferrable.)</li>
+              <li>Limited to 18 family groups</li>
+              <li>Sitting every other pew</li>
+              <li>Masks are mandatory</li>
+              <li>Currently no singing.</li>
+            </ul>
+          </li>
+          <li>10:30 AM worship outside at Jennings' Chapel
+            <ul>
+              <li>There is sign up posted on our Google Group.</li>
+              <li>Limited to 40 people</li>
+              <li>Sitting in socially distance household clusters.</li>
+              <li>Masks are mandatory</li>
+              <li>Currently no singing.</li>
+            </ul>          
+          </li>
+          <li>Sunday morning 11am Coffee and Donuts Zoom meeting</li>
+          <li>Sunday evening 5pm Zoom Small Groups</li>
           <li>Wednesday night Check-In starting at:
             <ul>
               <li>5:30pm elementary school</li>
